# docs/swagger.yaml
@@ -310,6 +310,8 @@ definitions:
         type: integer
       updatedAt:
         type: string
+      vendorCode:
+        type: string
     type: object
   transport.registerRequest:
     properties:
@@ -1868,8 +1870,16 @@ paths:
           description: 'Ошибка авторизации в маркетплейсе (код: auth_failed)'
           schema:
             $ref: '#/definitions/transport.errorResponse'
+        "429":
+          description: 'Маркетплейс ограничил запросы (код: marketplace_rate_limited)'
+          schema:
+            $ref: '#/definitions/transport.errorResponse'
         "500":
           description: Internal Server Error
+          schema:
+            $ref: '#/definitions/transport.errorResponse'
+        "502":
+          description: 'Маркетплейс недоступен (код: marketplace_unavailable)'
           schema:
             $ref: '#/definitions/transport.errorResponse'
       security:
